* Make Video Renderer statistics scalable to window size and unify graph look for EVR Sync and other renderers
* "Replace currently loaded subtitles" option no longer removes subtitles provided by splitter
* Ticket #2022/#4779: Rewrite subtitles downloading framework
    - Support for multiple subtitle providers including the default OpenSubtitles as well as
      podnapisi, titlovi, SubDB, ysubs and Napisy24 which can be enabled in Options (Subtitles -> Misc)
    - Ticket #5193, Ability to upload subtitles to OpenSubtitles and SubDB
    - Ability to login into OpenSubtitles
    - Ticket #5406, Ability to filter subtitle list by selected languages
    - Option to automatically search and download subtitles at the beginning of playback without user interaction
    - Prioritize subtitles for hearing impaired where indicated
* Ticket #5472, Append language code when saving the subtitles file
* Updated Arabic, Armenian, Basque, Belarusian, Bengali, British English, Catalan, Chinese (Simplified and Traditional),
  Croatian, Czech, Danish, Dutch, Finnish, French, Galician, German, Greek, Hebrew, Hungarian, Indonesian, Italian,
  Japanese, Korean, Lithuanian, Malay, Polish, Portuguese (Brazil), Punjabi, Romanian, Russian, Serbian, Slovak,
  Slovenian, Swedish, Spanish, Tatar, Thai, Turkish, Ukrainian and Vietnamese translations
! Window position and/or size could be wrong when exiting fullscreen mode for the first time and
  "Launch files in fullscreen" option is enabled
! Ticket #2202, Automatically rotate MP4/MOV/FLV files when the rotation info is available
! Ticket #5557, Show the correct language name for Serbian subtitles. They used to show as Croatian
! Ticket #5748, Track selection menus did not work when using DVB capture
! Ticket #5828, Update seekbar position when generating thumbnails
! Ticket #5829, Creating thumbnails while the video was stopped left the player in an undefined state. The stopped state
  is now properly restored after creating the thumbnails